# Two_body_project

./: .gitignore  CMakeLists.txt  Project.md  README.md
Profiles/: arms_race.ncu-rep
Project outline/: Project.md  Report.md  Two_body.puml  ref.bib  satelite.puml  two_body.md
data/: positions_0.txt  positions_1.txt  positions_2.txt  positions_3.txt  positions_794.txt  positions_9.txt  vis.py
project_outline/: Diagram.md  Two_body.puml  notes.md  satellite.md
src/: Makefile  kernel.cu  leap_frog.cu  leap_frog.h  n_body_sim_1.h  n_body_sim_2.h  two_body.h  verlet.cu  verlet.h  viewer.h  visual.h
